Integrate with lombok and Slf4j